# verimed-gtc

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  brand.md  docker-compose.yml  vercel.json
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_explainable_anomaly_analysis.py  0003_analysis_run_comparison_snapshots.py  0004_review_priority_and_financial_significance.py  0005_recurring_patterns.py  0006_expert_decision_journal.py  0007_serving_performance_indexes.py
backend/app/: __init__.py  api.py  config.py  database.py  main.py  models.py  schemas.py  seed.py
backend/app/services/: __init__.py  analysis_metrics.py  analysis_pipeline.py  analytics.py  analytics_pages.py  detection.py  expert_decisions.py  exports.py  financial_priority.py  fingerprints.py  organization_model.py  organizations.py  recurring_patterns.py  regional_monitoring.py  regions.py  risk.py  runtime_cache.py  showcase_storage.py  signals.py  storage_health.py
backend/app/synthetic/: __init__.py  catalog.py  generator.py  injectors.py
backend/scripts/: build_showcase_snapshot.py
backend/tests/: conftest.py  test_api.py  test_data_actions.py  test_deployment_config.py  test_detection_and_scoring.py  test_expert_decision_journal.py  test_financial_priority.py  test_recurring_patterns.py  test_showcase_storage.py  test_specialist_workflow.py  test_synthetic_generation.py
design-audit/: ANALYTICS_IMPLEMENTATION.md  DATA_ACTIONS_IMPLEMENTATION.md  DESIGN_SYSTEM_V2.md  (+8 more)
(+157 files in other folders)
